# Maize

./: .gitattributes  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ASSEMBLER.md  CARRYOVER.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HelloWorld.asm  LICENSE  Maize.sln  Maize.txt  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  book.toml  cli.asm  cpu.cpp  hex.asm  main.cpp  maize.h  maize.vcxproj  maize.vcxproj.filters  maize_cpu.h  maize_sys.h  mazm.vcxproj  mazm.vcxproj.filters  stdlib.asm  sys.cpp
.github/workflows/: ci.yml  docs.yml
asm/: HelloWorld.mazm  bore.mazm  cli.mazm  core.asm  except.asm  except.mazm  hello.asm  hello.c  hex.mazm  link_a.mazm  link_b.mazm  link_range.mazm  scratch.asm  scratch.mazm  simple-hello.mazm  stdlib.asm  test_adc.mazm  test_addr64.asm  test_address_fwdlabel.mazm  test_alu_memsrc_width.mazm  test_brk.mazm  test_call_ind.mazm  test_check_extern_ok.mazm  test_check_undeclared.mazm  test_cmptest.mazm  test_console_esc.mazm  test_copywidth.mazm  test_crossblock.mazm  test_div.mazm  test_dup_label.asm  test_dup_label.mazm  test_export_global.mazm  test_export_public.mazm  test_fb_registration.mazm  test_flags_arith.asm  test_flags_arith.mazm  test_flags_branch.mazm  test_flags_lazy_cmpxchg.mazm  test_flags_lazy_fcmp.mazm  test_flags_lazy_lea.mazm  (+100 more)
asm/lib/: test.mazm
asm/nested_mid/: leaf.mazm  middle.mazm
asm/old_tortilla_files/: cli.mazm  core.mazm  stdlib.mazm
ctest/: abort.c  addrlocalphi.c  addrlocalphi.expected  args.c  args.expected  atexit.c  atexit.expected  bulkmem.c  bulkmem.expected  caddroff.c  caddroff.expected  caddroff_flag.qbe  caddroff_flag_crt.mazm  capstone.c  capstone.expected  cat_home_hostfs.c  cat_hostfs.c  clock.c  clock.expected  ctype.c  ctype.expected  escape_hostfs.c  exitcode.c  fp.c  fp.expected  freelist.c  freelist.expected  globals.c  globals.expected  hello.c  kilo_hl_space_comment.c  kilo_hl_space_comment.expected  kilo_hl_tab_comment.c  kilo_hl_tab_comment.expected  kilo_next_cap.c  kilo_next_cap.expected  kilo_xalloc_die.c  kilo_xalloc_die.expected  ldzfold.c  ldzfold.expected  (+52 more)
ctest/relpath_sibling/: main.c  sibling.h
demos/: build-demos.sh
demos/console/: README.md  console_selfcheck.c
demos/doom/: README.md  doom.mzx  doom.sources  doom_bench.c  doom_i_video.c  doom_input_selfcheck.c  doom_main.c  doom_r_draw.c  doom_render_selfcheck.c  doom_render_selfcheck_quesos.c  doom_selfcheck.c  doom_transition_selfcheck.c  doom_viewport_check.h  doomgeneric_maize.c
demos/kilo/: README.md  kilo.c  kilo.mzx  kilo_xalloc.h
demos/terminal/: README.md  font8x8.h  term_core.h  terminal.c  terminal_selfcheck.c
docs/design/: build-performance-outline.md  build-performance.md  hostfs.md  jit.md  mzvm-quesos-boundary.md  quesos-enlightened-layer.md
docs/spec/: README.md  SUMMARY.md  addressing-modes.md  appendix-a-opcode-map.md  appendix-b-encoding-quickref.md  appendix-c-syscall-surface.md  appendix-d-glossary.md  conformance.md  cycle-cost.md  device-surface.md  execution-model.md  floating-point.md  instruction-encoding.md  instruction-reference.md  memory-model.md  overview.md  register-model.md  reservations.md  subregister-model.md  trap-model.md  versioning.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/server/: server.js
kosong/: hello.ks  kosong.md  kosong.xml
os/quesos/: argcheck.c  bigalloc.c  bigalloc_coalesce.c  bigfootprint_fork.c  bigimage.c  bigwrite_native.c  bin_echoer.c  blocked.c  bltc_multiaccess.c  build-quesos.sh  bulk_bounds.c  bulk_forward.c  bulk_kernel_range.c  bulk_noncontig.c  console_echo.c  consumer.c  cp_launch.c  cwd_resolve.c  demo_child1.c  demo_child2.c  exec_launch.c  exec_target.c  execvp_ext.c  execvp_run.c  fb_exec_launch.c  fb_exec_target.c  fb_exit_cleanup.c  fb_fork_cleanup.c  fb_mmap_enomem.c  fb_mmap_isolation.c  fb_mmap_paint.c  fb_noncontig_reject.c  fb_present.c  fb_register.c  fb_reject.c  filter.c  fork_isolation.c  fork_multi.c  fs_forward.c  kbd_acl.c  (+49 more)
scripts/: apply-cproc-patches.sh  apply-maize-qbe-target.sh  bootstrap-sdl2.ps1  bootstrap-toolchain.ps1  bootstrap-toolchain.sh  build-demos.ps1  build-pgo.ps1  build-quesos.ps1  build-toolchain.ps1  build-toolchain.sh  build-userland.ps1  build-world.ps1  build-world.sh  cc-maize.sh  install-mazm.ps1  install-mazm.sh  prune-native-mirrors.sh  pty_oksh_check.py  pty_oksh_kilo_check.py  pty_presenter_check.py  pty_presenter_doom_check.py  refresh-c-toolchain.sh  register-assoc.ps1  register-binfmt.sh  run-ctest.sh  run-tests.ps1  run-tests.sh
scripts/lib/: gitbash.ps1  harness-env.sh
scripts/pgo-profiles/: README.md
src/: console_io.h  cpu.cpp  devices.cpp  devices.h  font8x16.h  font8x8.h  fpu.h  host_tty.cpp  host_tty.h  jit.inl  main.cpp  maize.cpp  maize.h  maize_cpu.h  maize_obj.h  maize_sys.h  mazm.cpp  mzcc.c  mzcc_cache.c  mzcc_cache.h  mzcc_demos.c  mzcc_fs.c  mzcc_fs.h  mzcc_internal.h  mzcc_proc.h  mzcc_proc_core.c  mzcc_proc_posix.c  mzcc_proc_win32.c  mzcc_quesos.c  mzcc_sched.c  mzcc_sched.h  mzcc_sha256.c  mzcc_sha256.h  mzcc_userland.c  mzdis.cpp  mzld.cpp  perf.cpp  perf.h  presenter_link.cpp  presenter_link.h  (+8 more)
src/hostfs/: hostfs.h  hostfs_core.c  hostfs_core.h  hostfs_posix.c  hostfs_win32.c
toolchain/: VENDORING.md
toolchain/cproc-patches/: 0001-typecommonreal-unsigned-llong.patch
toolchain/qbe-maize/: BACKEND-COVERAGE.md  CALLING-CONVENTION.md  README.md  abi.c  all.h  data.c  emit.c  isel.c  qbe-registration.patch  targ.c
toolchain/rt/: SYSCALL-ABI.md  assert.h  crt0.mazm  ctype.c  ctype.h  dirent.c  dirent.h  errno.c  errno.h  fcntl.h  inttypes.h  libgen.h  limits.h  math.c  math.h  mzdev.h  mzdev.mazm  poll.h  puts.mazm  setjmp.h  setjmp.mazm  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  strings.c  strings.h  syscall.h  syscall.mazm  termios.c  termios.h  time.c  time.h  (+2 more)
userland/: VENDORING.md  build-userland.sh
userland/include/: regex.h
userland/patches/: README.md
(+96 files in other folders)
